# tree-sitter-automn

./: CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  Package.swift  binding.gyp  compose.yaml  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  testgen.js  tree-sitter.json  type_test.automn
bindings/c/: tree-sitter-automn.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_automn/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterautomn/: automn.h
bindings/swift/TreeSitterautomnTests/: TreeSitterautomnTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: types.txt
