[package]
name = "tree-sitter-automn"
description = "A language for definining data structures and models"
version = "0.1.0"
authors = ["Joseph Ennis <joe@ennisj.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "automn"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ennisj9/automn"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
